fixed the date spacing, added in hide all button, added in new page button

--- a/newCSS.css
+++ b/newCSS.css
@@ -18,6 +18,11 @@
 
 }
 
+#settingsButton{
+	margin-left: 91vw;
+	margin-top: 1vh;
+}
+
 #commandInputDIV{
 	margin-left: auto;
 	margin-right: auto;
@@ -36,7 +41,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	display:table;
-	margin-top: 10vh;
+	margin-top: 7vh;
 	max-height: inherit;
 	/* padding-top: 15%; */
 	font-size: 20px;
@@ -55,6 +60,11 @@
 	display:table;
 	/* margin: auto; */
 	font-size: 12px;
+	margin-top: 1vh;
+}
+
+#hideAllButton{
+	margin-left: 91vw;
 	margin-top: 3vh;
 }
 
@@ -67,6 +77,10 @@
 		margin-top:0;
 	}
 	#commandInputDIV{
+		margin-top: 0;
+	}
+	#hideAllButton{
+		margin-left: 91vw;
 		margin-top: 0;
 	}
 }
@@ -121,6 +135,7 @@
 	height: 22vh;
 	/* -webkit-transform: translateZ(0);
 	transform: translateZ(0); */
+	overflow-y: auto;
 }
 
 #exitRemindersButton{
